--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -21,7 +21,7 @@ const { post } = Astro.props;
 const { Content, headings, remarkPluginFrontmatter } = await render(post);
 const { title, description, publishedDate, tags } = post.data;
 const postURL = new URL('/blog/' + post.id + '/', Astro.site).toString();
-const ogImageURL = new URL('/open-graph/blog/' + post.id + '.png', Astro.site).toString();
+const ogImageURL = new URL('/open-graph/blog/' + post.id + '.png?cb=20260216', Astro.site).toString();
 ---
 
 <Layout
